--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <div class="card">
       <h2>Copying Lyrical Data</h2>
       <h5>June 13, 2019</h5>
-      <p>I never find myself too interested in the intellectual property cases that occur outside of the gaming industry, but, a Variety article titled ìGenius Accuses Google of Scraping Song Lyrics, Music Data Company Hits Backî caught my eye this week.</p> 
- 	 <p>It is a weird situation that Iíve thought about before, especially when using Spotify. Sometimes, when listening to my playlists on Spotifyís app, the album artwork rotates, and I can see lyrics and artistsí anecdotes. This is all provided by Genius, a popular lyric website, and I assumed the artistsí and their labels gave permission to the website. </p> 
-	    <p>Yet, apparently, the industry doesnít normally operate like this. Google partners with a lyric ìpublisherî who obtains the lyrical metadata as a third-party contractor, with much less scrutiny. </p> 
-		<p>Which is fine, not every industry needs to be regulated to death, but Iím curious about the accountability. Is it even possible to sue Google (as Genius), if their third-party is using your metadata? If they obtain the rights to the lyrics of, say, ìLike a Rolling Stone,î and publish with your metadata, is there a course of action? </p> 
-			<p>They have the rights to the lyrics, and thereís no tangible difference between your metadata and the original work they have the rights to. To me, this seems like a rare case of data being evaluated at more than its worth. Never thought Iíd say that sentence in 2019. </p> 
+      <p>I never find myself too interested in the intellectual property cases that occur outside of the gaming industry, but, a Variety article titled ‚ÄúGenius Accuses Google of Scraping Song Lyrics, Music Data Company Hits Back‚Äù caught my eye this week.</p> 
+ 	 <p>It is a weird situation that I‚Äôve thought about before, especially when using Spotify. Sometimes, when listening to my playlists on Spotify‚Äôs app, the album artwork rotates, and I can see lyrics and artists‚Äô anecdotes. This is all provided by Genius, a popular lyric website, and I assumed the artists‚Äô and their labels gave permission to the website. </p> 
+	    <p>Yet, apparently, the industry doesn‚Äôt normally operate like this. Google partners with a lyric ‚Äúpublisher‚Äù who obtains the lyrical metadata as a third-party contractor, with much less scrutiny. </p> 
+		<p>Which is fine, not every industry needs to be regulated to death, but I‚Äôm curious about the accountability. Is it even possible to sue Google (as Genius), if their third-party is using your metadata? If they obtain the rights to the lyrics of, say, ‚ÄúLike a Rolling Stone,‚Äù and publish with your metadata, is there a course of action? </p> 
+			<p>They have the rights to the lyrics, and there‚Äôs no tangible difference between your metadata and the original work they have the rights to. To me, this seems like a rare case of data being evaluated at more than its worth. Never thought I‚Äôd say that sentence in 2019. </p> 
 </div>
     <div class="card">
       <h2>TITLE HEADING</h2>
@@ -23,7 +23,7 @@
   </div>
 
 </div>
-
+ 
 <div class="mattaey@gmail.com or @mattaey on most socials">
   <h2>Talk to me via mattaey@gmail.com, or you can find me @mattaey on most socials</h2>
 </div>
