--- a/index.html
+++ b/index.html
@@ -1,30 +1,35 @@
-<meta charset="UTF-8">
+<div class="header">
+<div class="header">
 <div class="header">
 <h2>Matt Childrey</h2>
 <h2>About Me</h2>
-<p>Twenty-something writer and college student at the University of Memphis. This is a small collection of my rambles, most of which are on law or esports.</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
+<p>Twenty-something writer and college student at the University of Memphis. This is a small collection of my rambles, most of which are on law or esports. Sometimes poetry and essays. Website code is basic HTML5, hosted on my Github repository.</p>
 </div>
 <div class="row">
 <div class="leftcolumn">
 <div class="card">
-<h2><em><span>Copying Lyrical Metadata</span></em></h2>
+<h2>Copying Lyrical Data / Intellectual Property</h2>
 <h5>June 13, 2019</h5>
-<p>I never find myself too interested in the intellectual property cases that occur outside of the gaming industry, but, a Variety article titled "Genius Accuses Google of Scraping Song Lyrics, Music Data Company Hits Back" caught my eye this week.</p>
-<p>It is a weird situation that I've thought about before, especially when using Spotify. Sometimes, when listening to my playlists on Spotify's app, the album artwork rotates, and I can see lyrics and artists' anecdotes. This is all provided by Genius, a popular lyric website, and I assumed the artists&rsquo; and their labels gave permission to the website.</p>
-<p>Yet, apparently, the industry doesn't normally operate like this. Google partners with a lyric publisher (who obtains the metadata as a third-party contractor) with much less scrutiny.</p>
-<p>Which is fine, not every industry needs to be regulated to death, but I'm curious about the accountability. Is it even possible to sue Google (as Genius), if their third-party is using your metadata? If they obtain the rights to the lyrics of, say, <em>Like a Rolling Stone</em>, and publish with your metadata, is there a course of action?</p>
-<p>They have the rights to the lyrics, and there's no tangible difference between your metadata and the original work they have the rights to. To me, this seems like a rare case of data being evaluated at more than its worth. Never thought I'd say that sentence in 2019.</p>
-<p><a href="https://variety.com/2019/digital/news/genius-vs-google-1203245421/">https://variety.com/2019/digital/news/genius-vs-google-1203245421/</a>&nbsp;</p>
+<p>I never find myself too interested in the intellectual property cases that occur outside of the gaming industry, but, a Variety article titled &ldquo;Genius Accuses Google of Scraping Song Lyrics, Music Data Company Hits Back&rdquo; caught my eye this week.</p>
+<p>It is a weird situation that I&rsquo;ve thought about before, especially when using Spotify. Sometimes, when listening to my playlists on Spotify&rsquo;s app, the album artwork rotates, and I can see lyrics and artists&rsquo; anecdotes. This is all provided by Genius, a popular lyric website, and I assumed the artists&rsquo; and their labels gave permission to the website.</p>
+<p>Yet, apparently, the industry doesn&rsquo;t normally operate like this. Google partners with a lyric &ldquo;publisher&rdquo; who obtains the lyrical metadata as a third-party contractor, with much less scrutiny.</p>
+<p>Which is fine, not every industry needs to be regulated to death, but I&rsquo;m curious about the accountability. Is it even possible to sue Google (as Genius), if their third-party is using your metadata? If they obtain the rights to the lyrics of, say, &ldquo;Like a Rolling Stone,&rdquo; and publish with your metadata, is there a course of action?</p>
+<p>They have the rights to the lyrics, and there&rsquo;s no tangible difference between your metadata and the original work they have the rights to. To me, this seems like a rare case of data being evaluated at more than its worth. Never thought I&rsquo;d say that sentence in 2019.</p>
 </div>
 <div class="card">
-<h2>TITLE HEADING</h2>
-<h5>Title description, Sep 2, 2017</h5>
+<h2>Foord for Thought on the TFue Situation / Contract Disputes</h2>
+<h5>May 26, 2019</h5>
+<p>I wanted to say something about the talk of the week, which has been about the 80/20 split on Brand Deals found in TFue's player contract with FaZe Clan.</p>
+<p>I get why a cut of this proportion would leave most people surprised, it is different. When I first looked at it in a vacuum, and when thinking of the context of traditional player agreements, I was also taken aback.</p>
+<p>Yet, when thinking about TFue's revenue streams, and similar situations, I can see how it occured. While player contracts are normally not public in esports (which is something I dislike, but a topic for another time), RattleSnake Gaming's player contracts from TI 2013 are a good refrence. Because, just like TFue, those players don't have a traditional esports situation. Whereas highly established, franchesed leagues like the LCS or LEC have high salaries, Dota is known for player revenue deriving mostly from prize pools. As you can see from <a href="https://cloud.gonitro.com/p/EKThFAHgLa0Hxyuj79efqu">SingSing </a>and <a href="https://cloud.gonitro.com/p/LI48qiWpAynk_6N4yM_IUD">EternalEnvy </a>here, they would have recieved only a 10% cut if they placed first or second at the event (they placed t16 if you were wondering).&nbsp;</p>
+<p>TFue himself may have a player contract, but here isn't a traditional&nbsp;<em>esport player</em>, in the sense of competitions. He falls into the category fo influencer more, with his huge followings on Twitter and Instagram. Places where the Brand Deal space is currently exploding with oppurtunity for creators.&nbsp;<em><br /></em></p>
+<p>Just a factor I think we should keep in mind, I still hope the best for both TFue and FaZe Clan when it comes to solving this dispute. If you want to know more, I suggest you read Ryan Morrison's op-ed<a href="https://www.hollywoodreporter.com/news/tfues-lawsuit-faze-clan-is-esports-wake-up-call-revamp-deals-guest-column-1213702"> he wrote for The Hollywood Reporter.&nbsp;</a></p>
 </div>
 </div>
 </div>
 <div class="mattaey@gmail.com or @mattaey on most socials">
 <h2>&nbsp;</h2>
-<h2><em>Talk to me at mattaey@gmail.com, or you can find me @mattaey on most socials</em></h2>
+<h2><em>Mattaey #1268 on Discord, or @Mattaey on most socials. Also can email me at mattaey@gmail.com</em></h2>
+</div>
+</div>
 </div>
