--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <div class="header">
-<div class="header">
-<div class="header">
 <h2>Matt Childrey</h2>
 <h2>About Me</h2>
 <p>Twenty-something writer and college student at the University of Memphis. This is a small collection of my rambles, most of which are on law or esports. Sometimes poetry and essays. Website code is basic HTML5, hosted on my Github repository.</p>
@@ -21,15 +19,17 @@
 <h5>May 26, 2019</h5>
 <p>I wanted to say something about the talk of the week, which has been about the 80/20 split on Brand Deals found in TFue's player contract with FaZe Clan.</p>
 <p>I get why a cut of this proportion would leave most people surprised, it is different. When I first looked at it in a vacuum, and when thinking of the context of traditional player agreements, I was also taken aback.</p>
-<p>Yet, when thinking about TFue's revenue streams, and similar situations, I can see how it occured. While player contracts are normally not public in esports (which is something I dislike, but a topic for another time), RattleSnake Gaming's player contracts from TI 2013 are a good refrence. Because, just like TFue, those players don't have a traditional esports situation. Whereas highly established, franchesed leagues like the LCS or LEC have high salaries, Dota is known for player revenue deriving mostly from prize pools. As you can see from <a href="https://cloud.gonitro.com/p/EKThFAHgLa0Hxyuj79efqu">SingSing </a>and <a href="https://cloud.gonitro.com/p/LI48qiWpAynk_6N4yM_IUD">EternalEnvy </a>here, they would have recieved only a 10% cut if they placed first or second at the event (they placed t16 if you were wondering).&nbsp;</p>
+<p>Yet, when thinking about TFue's revenue streams, and similar situations, I can see how it occured. While player contracts are normally not public in esports (which is something I dislike, but a topic for another time), RattleSnake Gaming's player contracts from TI 2013 are a good refrence. Because, just like TFue, those players don't have a traditional esports situation. Whereas highly established, franchesed leagues like the LCS or LEC have high salaries, Dota is known for player revenue deriving mostly from prize pools. As you can see from&nbsp;<a href="https://cloud.gonitro.com/p/EKThFAHgLa0Hxyuj79efqu">SingSing&nbsp;</a>and&nbsp;<a href="https://cloud.gonitro.com/p/LI48qiWpAynk_6N4yM_IUD">EternalEnvy&nbsp;</a>here, they would have recieved only a 10% cut if they placed first or second at the event (they placed t16 if you were wondering).&nbsp;</p>
 <p>TFue himself may have a player contract, but here isn't a traditional&nbsp;<em>esport player</em>, in the sense of competitions. He falls into the category fo influencer more, with his huge followings on Twitter and Instagram. Places where the Brand Deal space is currently exploding with oppurtunity for creators.&nbsp;<em><br /></em></p>
-<p>Just a factor I think we should keep in mind, I still hope the best for both TFue and FaZe Clan when it comes to solving this dispute. If you want to know more, I suggest you read Ryan Morrison's op-ed<a href="https://www.hollywoodreporter.com/news/tfues-lawsuit-faze-clan-is-esports-wake-up-call-revamp-deals-guest-column-1213702"> he wrote for The Hollywood Reporter.&nbsp;</a></p>
+<p>Just a factor I think we should keep in mind, I still hope the best for both TFue and FaZe Clan when it comes to solving this dispute. If you want to know more, I suggest you read Ryan Morrison's op-ed<a href="https://www.hollywoodreporter.com/news/tfues-lawsuit-faze-clan-is-esports-wake-up-call-revamp-deals-guest-column-1213702">&nbsp;he wrote for The Hollywood Reporter.&nbsp;</a></p>
 </div>
 </div>
 </div>
 <div class="mattaey@gmail.com or @mattaey on most socials">
 <h2>&nbsp;</h2>
+<h2>Thinking Back on Petty</h2>
+<h5>April 4, 2019</h5>
+<p>Since the weather is finally warming up, I shuffled my classic rock playlist on the way home from class today. As soon as&nbsp;<em>Crawling Back to You</em> came on, I instantly recalled my poem from a few years ago. I wrote it just after Tom Petty had passed, and man it is&nbsp;<em>really</em> terrible. But I was in a rut when I wrote it Freshman year, and it makes me smile looking back on it now. I vividly remember listening to Petty on the radio as a child in the 00's, and the poem at least entices that vividry. I'm going to post it here, where it is a little bit safer than my iPhone's notepad...&nbsp;</p>
+<p><img src="https://cdn.discordapp.com/attachments/334533123243245568/590438168143331345/unknown.png" alt="" width="145" height="209" /></p>
 <h2><em>Mattaey #1268 on Discord, or @Mattaey on most socials. Also can email me at mattaey@gmail.com</em></h2>
-</div>
-</div>
 </div>
