--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <h2>Thinking Back on Petty</h2>
 <h5>April 4, 2019</h5>
 <p>Since the weather is finally warming up, I shuffled my classic rock playlist on the way home from class today. As soon as&nbsp;<em>Crawling Back to You</em> came on, I instantly recalled my poem from a few years ago. I wrote it just after Tom Petty had passed, and man it is&nbsp;<em>really</em> terrible. But I was in a rut when I wrote it Freshman year, and it makes me smile looking back on it now. I vividly remember listening to Petty on the radio as a child in the 00's, and the poem at least entices that vividry. I'm going to post it here, where it is a little bit safer than my iPhone's notepad...&nbsp;</p>
-<p><img src="https://cdn.discordapp.com/attachments/334533123243245568/590438168143331345/unknown.png" alt="" width="145" height="209" /></p>
-<h2><em>Mattaey #1268 on Discord, or @Mattaey on most socials. Also can email me at mattaey@gmail.com</em></h2>
-</div>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<h2><em style="font-size: 1.5em;">Mattae</em><em style="font-size: 1.5em;">y #1268 on D</em><em style="font-size: 1.5em;">iscord, or @Mattaey on most socials. Also can email me at mattaey@gmail.com</em></h2>
