--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <div class="row">
 <div class="leftcolumn">
 <div class="card">
-<a href=linktest.html title= FTP test html> Link Test</a>
+<a href=linktest.html title= FTP test html> Food for Thought on the TFue Situation / Contract Disputes</a>
 
 <div class="card">
 <h2>Copying Lyrical Data / Intellectual Property</h2>
