--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <h2>About Me</h2>
 <p>Twenty-something writer and college student at the University of Memphis. This is a small collection of my rambles, most of which are on law or esports. Sometimes poetry and essays. Website code is basic HTML5, hosted on my Github repository.</p>
 </div>
-<div class="row">
-<div class="leftcolumn">
-<div class="card">
-<a href=linktest.html title= FTP test html> Food for Thought on the TFue Situation / Contract Disputes</a>
+<a href=TFue.html title= FTP test html> Food for Thought on the TFue Situation / Contract Disputes</a>. May 26, 2019
 
 <div class="card">
 <h2>Copying Lyrical Data / Intellectual Property</h2>
@@ -17,6 +14,7 @@
 <p>Which is fine, not every industry needs to be regulated to death, but I&rsquo;m curious about the accountability. Is it even possible to sue Google (as Genius), if their third-party is using your metadata? If they obtain the rights to the lyrics of, say, &ldquo;Like a Rolling Stone,&rdquo; and publish with your metadata, is there a course of action?</p>
 <p>They have the rights to the lyrics, and there&rsquo;s no tangible difference between your metadata and the original work they have the rights to. To me, this seems like a rare case of data being evaluated at more than its worth. Never thought I&rsquo;d say that sentence in 2019.</p>
 </div>
+
 <div class="card">
 <h2>Food for Thought on the TFue Situation / Contract Disputes</h2>
 <h5>May 26, 2019</h5>
@@ -26,10 +24,7 @@
 <p>TFue himself may have a player contract, but here isn't a traditional&nbsp;<em>esport player</em>, in the sense of competitions. He falls into the category fo influencer more, with his huge followings on Twitter and Instagram. Places where the Brand Deal space is currently exploding with oppurtunity for creators.&nbsp;<em><br /></em></p>
 <p>Just a factor I think we should keep in mind, I still hope the best for both TFue and FaZe Clan when it comes to solving this dispute. If you want to know more, I suggest you read Ryan Morrison's op-ed<a href="https://www.hollywoodreporter.com/news/tfues-lawsuit-faze-clan-is-esports-wake-up-call-revamp-deals-guest-column-1213702">&nbsp;he wrote for The Hollywood Reporter.&nbsp;</a></p>
 </div>
-</div>
-</div>
-<div class="mattaey@gmail.com or @mattaey on most socials">
-<h2>&nbsp;</h2>
+
 <h2>Thinking Back on Petty</h2>
 <h5>April 4, 2019</h5>
 <p>Since the weather is finally warming up, I shuffled my classic rock playlist on the way home from class today. As soon as&nbsp;<em>Crawling Back to You</em>&nbsp;came on, I instantly recalled my poem from a few years ago. I wrote it just after Tom Petty had passed, and man it is&nbsp;<em>really</em>&nbsp;terrible. But I was in a rut when I wrote it Freshman year, and it makes me smile looking back on it now. I vividly remember listening to Petty on the radio as a child in the 00's, and the poem at least entices that vividry. I'm going to post it here, where it is a little bit safer than my iPhone's notepad...&nbsp;</p>
@@ -37,4 +32,3 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <h2><em>Mattae</em><em>y #1268 on D</em><em>iscord, or @Mattaey on most socials. Also can email me at mattaey@gmail.com</em></h2>
-</div>
