--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
-﻿<div class="header">
+﻿<html>
+<head> 
+<title> <strong> Matthew Childrey </strong> </title>
+<style type="text/css">
+        body
+        {
+    text-align: center;
+        }
+      </style>
+
+</head> 
+
+<div class="header">
 <h2>Matt Childrey</h2>
 <h2>About Me</h2>
 <p>Twenty-something writer and college student at the University of Memphis. This is a small collection of my rambles, most of which are on law or esports. Sometimes poetry and essays. Website code is basic HTML5, hosted on my Github repository.</p>
@@ -32,3 +44,5 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <h2><em>Mattae</em><em>y #1268 on D</em><em>iscord, or @Mattaey on most socials. Also can email me at mattaey@gmail.com</em></h2>
+
+<html>
