--- a/TFue.html
+++ b/TFue.html
@@ -1,10 +1,13 @@
-﻿<div class="header">
+﻿<html>
+<head> 
+<title> <strong> Matthew Childrey </strong> </title>
+</head>
+<body> 
+
+<div class="header">
 <h2>Matt Childrey</h2>
 
 </div>
-<div class="row">
-<div class="leftcolumn">
-<div class="card">
 <h2>Food for Thought on the TFue Situation / Contract Disputes</h2>
 <h5>May 26, 2019</h5>
 <p>I wanted to say something about the talk of the week, which has been about the 80/20 split on Brand Deals found in TFue's player contract with FaZe Clan.</p>
@@ -14,7 +17,10 @@
 <p>Just a factor I think we should keep in mind, I still hope the best for both TFue and FaZe Clan when it comes to solving this dispute. If you want to know more, I suggest you read Ryan Morrison's op-ed<a href="https://www.hollywoodreporter.com/news/tfues-lawsuit-faze-clan-is-esports-wake-up-call-revamp-deals-guest-column-1213702">&nbsp;he wrote for The Hollywood Reporter.&nbsp;</a></p>
 </div>
 
-<h2>&nbsp;</h2>
-<h2>&nbsp;</h2>
+
 <h2><em>Mattae</em><em>y #1268 on D</em><em>iscord, or @Mattaey on most socials. Also can email me at mattaey@gmail.com</em></h2>
 </div>
+
+
+</body>
+</html>
