--- a/index.html
+++ b/index.html
@@ -8,41 +8,24 @@
         }
       </style>
 
-</head> 
+</head>
+<body> 
 
 <div class="header">
 <h2>Matt Childrey</h2>
 <h2>About Me</h2>
 <p>Twenty-something writer and college student at the University of Memphis. This is a small collection of my rambles, most of which are on law or esports. Sometimes poetry and essays. Website code is basic HTML5, hosted on my Github repository.</p>
 </div>
+<a href=Lyrical.html title= Copying Lyrical Data / Intellectual Property</a>. June 13, 2019
 <a href=TFue.html title= FTP test html> Food for Thought on the TFue Situation / Contract Disputes</a>. May 26, 2019
 
-<div class="card">
-<h2>Copying Lyrical Data / Intellectual Property</h2>
-<h5>June 13, 2019</h5>
-<p>I never find myself too interested in the intellectual property cases that occur outside of the gaming industry, but, a Variety article titled &ldquo;Genius Accuses Google of Scraping Song Lyrics, Music Data Company Hits Back&rdquo; caught my eye this week.</p>
-<p>It is a weird situation that I&rsquo;ve thought about before, especially when using Spotify. Sometimes, when listening to my playlists on Spotify&rsquo;s app, the album artwork rotates, and I can see lyrics and artists&rsquo; anecdotes. This is all provided by Genius, a popular lyric website, and I assumed the artists&rsquo; and their labels gave permission to the website.</p>
-<p>Yet, apparently, the industry doesn&rsquo;t normally operate like this. Google partners with a lyric &ldquo;publisher&rdquo; who obtains the lyrical metadata as a third-party contractor, with much less scrutiny.</p>
-<p>Which is fine, not every industry needs to be regulated to death, but I&rsquo;m curious about the accountability. Is it even possible to sue Google (as Genius), if their third-party is using your metadata? If they obtain the rights to the lyrics of, say, &ldquo;Like a Rolling Stone,&rdquo; and publish with your metadata, is there a course of action?</p>
-<p>They have the rights to the lyrics, and there&rsquo;s no tangible difference between your metadata and the original work they have the rights to. To me, this seems like a rare case of data being evaluated at more than its worth. Never thought I&rsquo;d say that sentence in 2019.</p>
-</div>
-
-<div class="card">
-<h2>Food for Thought on the TFue Situation / Contract Disputes</h2>
-<h5>May 26, 2019</h5>
-<p>I wanted to say something about the talk of the week, which has been about the 80/20 split on Brand Deals found in TFue's player contract with FaZe Clan.</p>
-<p>I get why a cut of this proportion would leave most people surprised, it is different. When I first looked at it in a vacuum, and when thinking of the context of traditional player agreements, I was also taken aback.</p>
-<p>Yet, when thinking about TFue's revenue streams, and similar situations, I can see how it occured. While player contracts are normally not public in esports (which is something I dislike, but a topic for another time), RattleSnake Gaming's player contracts from TI 2013 are a good refrence. Because, just like TFue, those players don't have a traditional esports situation. Whereas highly established, franchesed leagues like the LCS or LEC have high salaries, Dota is known for player revenue deriving mostly from prize pools. As you can see from&nbsp;<a href="https://cloud.gonitro.com/p/EKThFAHgLa0Hxyuj79efqu">SingSing&nbsp;</a>and&nbsp;<a href="https://cloud.gonitro.com/p/LI48qiWpAynk_6N4yM_IUD">EternalEnvy&nbsp;</a>here, they would have recieved only a 10% cut if they placed first or second at the event (they placed t16 if you were wondering).&nbsp;</p>
-<p>TFue himself may have a player contract, but here isn't a traditional&nbsp;<em>esport player</em>, in the sense of competitions. He falls into the category fo influencer more, with his huge followings on Twitter and Instagram. Places where the Brand Deal space is currently exploding with oppurtunity for creators.&nbsp;<em><br /></em></p>
-<p>Just a factor I think we should keep in mind, I still hope the best for both TFue and FaZe Clan when it comes to solving this dispute. If you want to know more, I suggest you read Ryan Morrison's op-ed<a href="https://www.hollywoodreporter.com/news/tfues-lawsuit-faze-clan-is-esports-wake-up-call-revamp-deals-guest-column-1213702">&nbsp;he wrote for The Hollywood Reporter.&nbsp;</a></p>
-</div>
 
 <h2>Thinking Back on Petty</h2>
 <h5>April 4, 2019</h5>
 <p>Since the weather is finally warming up, I shuffled my classic rock playlist on the way home from class today. As soon as&nbsp;<em>Crawling Back to You</em>&nbsp;came on, I instantly recalled my poem from a few years ago. I wrote it just after Tom Petty had passed, and man it is&nbsp;<em>really</em>&nbsp;terrible. But I was in a rut when I wrote it Freshman year, and it makes me smile looking back on it now. I vividly remember listening to Petty on the radio as a child in the 00's, and the poem at least entices that vividry. I'm going to post it here, where it is a little bit safer than my iPhone's notepad...&nbsp;</p>
-<p>&nbsp;<img title="And I'm Free" src="https://i.imgur.com/ibqSkD8.png" alt="Tom Petty Poem" width="275" height="397" /></p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
+<p>&nbsp;<img title="And I'm Free" src="https://i.imgur.com/ibqSkD8.png" alt="Tom Petty Poem" width="275" height="397" ></p>
+
 <h2><em>Mattae</em><em>y #1268 on D</em><em>iscord, or @Mattaey on most socials. Also can email me at mattaey@gmail.com</em></h2>
 
-<html>
+</body>
+</html>
