--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <h2>About Me</h2>
 <p>Twenty-something writer and college student at the University of Memphis. This is a small collection of my rambles, most of which are on law or esports. Sometimes poetry and essays. Website code is basic HTML5, hosted on my Github repository.</p>
 </div>
-<a href=Lyrical.html title= Copying Lyrical Data / Intellectual Property</a>. June 13, 2019
-<a href=TFue.html title= FTP test html> Food for Thought on the TFue Situation / Contract Disputes</a>. May 26, 2019
+<a href=Lyrical.html> Copying Lyrical Data / Intellectual Property </a>. June 13, 2019
+<a href=TFue.html> Food for Thought on the TFue Situation / Contract Disputes</a>. May 26, 2019
 
 
 <h2>Thinking Back on Petty</h2>
