--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 <p>Twenty-something writer and college student at the University of Memphis. This is a small collection of my rambles, most of which are on law or esports. Sometimes poetry and essays. Website code is basic HTML5, hosted on my Github repository.</p>
 </div>
 <ul>
+
+<div class="links">
 <li> <a href=Lyrical.html> Copying Lyrical Data / Intellectual Property </a>. June 13, 2019 </li>
 <li> <a href=TFue.html> Food for Thought on the TFue Situation / Contract Disputes</a>. May 26, 2019 </li>
 <li> <a href=Petty.html> Thinking Back on Petty</a>. April 4, 2019 </li>
 </ul>
-
+</div>
 
 <h2><em>Mattae</em><em>y #1268 on D</em><em>iscord, or @Mattaey on most socials. Also can email me at mattaey@gmail.com</em></h2>
 
