--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 ﻿<html>
 <head> 
-<title> Matthew Childrey </title>
+<title> Mattaey </title>
 <style type="text/css">
         body
         {
     text-align: center;
         }
+ul {
+    text-align: center;
+    list-style-position: inside;
+}
       </style>
 
 </head>
 <body> 
 
 <div class="header">
-<h2>Matt Childrey</h2>
+<h2>Matthew Childrey</h2>
 <h2>About Me</h2>
 <p>Twenty-something writer and college student at the University of Memphis. This is a small collection of my rambles, most of which are on law or esports. Sometimes poetry and essays. Website code is basic HTML5, hosted on my Github repository.</p>
 </div>
