--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ ul {
 <div class="header">
 <h2>Matthew Childrey</h2>
 <h2>About Me</h2>
-<p>Twenty-something writer and college student at the University of Memphis. This is a small collection of my rambles, most of which are on law or esports. Sometimes poetry and essays. Website code is basic HTML5, hosted on my Github repository.</p>
+<p>Twenty-something writer and student at the University of Memphis. This is a small collection of my rambles, most of which are on law or esports. Sometimes poetry and essays. Website code is basic HTML, hosted on my Github repository.</p>
 </div>
 <ul>
 
@@ -26,6 +26,8 @@ ul {
 <li> <a href=Lyrical.html> Copying Lyrical Data / Intellectual Property </a>. June 13, 2019 </li>
 <li> <a href=TFue.html> Food for Thought on the TFue Situation / Contract Disputes</a>. May 26, 2019 </li>
 <li> <a href=Petty.html> Thinking Back on Petty</a>. April 4, 2019 </li>
+<li> <a href=IreliaGuide.html> A Different Kind of Writing</a>. October 1, 2018 </li>
+<li> <a href=VisaLeague.html> How Trump's "Buy American and Hire American" Policy Might Hurt League of Legends</a>. July 28, 2018 </li>
 </ul>
 </div>
 
