--- a/Lyrical.html
+++ b/Lyrical.html
@@ -8,7 +8,7 @@
 <h2>Matt Childrey</h2>
 
 </div>
-<h2>Copying Lyrical Data / Intellectual Property</h2>. June 13, 2019
+<h2>Copying Lyrical Data / Intellectual Property</h2> June 13, 2019
 <p>I never find myself too interested in the intellectual property cases that occur outside of the gaming industry, but, a Variety article titled &ldquo;Genius Accuses Google of Scraping Song Lyrics, Music Data Company Hits Back&rdquo; caught my eye this week.</p>
 <p>It is a weird situation that I&rsquo;ve thought about before, especially when using Spotify. Sometimes, when listening to my playlists on Spotify&rsquo;s app, the album artwork rotates, and I can see lyrics and artists&rsquo; anecdotes. This is all provided by Genius, a popular lyric website, and I assumed the artists&rsquo; and their labels gave permission to the website.</p>
 <p>Yet, apparently, the industry doesn&rsquo;t normally operate like this. Google partners with a lyric &ldquo;publisher&rdquo; who obtains the lyrical metadata as a third-party contractor, with much less scrutiny.</p>
