--- a/VisaLeague.html
+++ b/VisaLeague.html
@@ -1,6 +1,6 @@
 ﻿<html>
 <head> 
-<title> <strong> Matthew Childrey </strong> </title>
+<title>  Matthew Childrey  </title>
 </head>
 <body> 
 
@@ -13,13 +13,13 @@
 <p dir="ltr">&nbsp;</p>
 <p dir="ltr">At the start of an NALCS split, I can always expect to see new Korean and European imports into the league. I worry that this trend might slowdown though, now that these new policies will be implemented. Currently, the players are using H1-B or P1-A visas to play, and the policy will increase scrutiny on those visa applications. If you&rsquo;re curious as to why this I think this is a bad idea, let me tell you.</p>
 <p>&nbsp;</p>
-<p dir="ltr">For one, the talent pool just isn&rsquo;t up to par in America. We consistently place behind South Korea at international events, and Europe is starting to trail ahead. While I&rsquo;m not a professional (despite what my hardtack Platinum self would like to think), it isn&rsquo;t controversial to say our server isn&rsquo;t as competitive as theirs are. This idea that NALCS teams should hire more Americans would only weaken the league, which is counter intuitive to its goal.</p>
+<p dir="ltr">For one, the talent pool just isn&rsquo;t up to par in America. We consistently place behind South Korea at international events, and Europe is starting to trail ahead. While I&rsquo;m not a professional (despite what my hardstuck Platinum self would like to think), it isn&rsquo;t controversial to say our server is weaker than their's. This idea that NALCS teams should hire more Americans would only weaken the league, which is counter intuitive to its goal.</p>
 <p><br /><br /></p>
-<p dir="ltr">If the state of the league weakens, it won&rsquo;t just be the players who leave. Fans, sponsorships and even entire tournament organizers could uproot to another country. That&rsquo;s just the nature of our sport, it is not localized. The Dallas Cowboys would suffer if they had to move to Chicago, but Cloud9 could survive if its company and all of its revenue switched base to Denmark.</p>
+<p dir="ltr">If the state of the league weakens, it won&rsquo;t just be the players who leave. Fans, sponsorships and even entire tournament organizers could uproot to another country. That&rsquo;s just the nature of our sport, it is not as localized as traditional sports. The Dallas Cowboys would suffer if they had to move to Chicago, but Cloud9 could survive if its company and all of its revenue switched base to Denmark.</p>
 <p><br /><br /></p>
-<p dir="ltr">Just a quick rant as to how these new policies from the executive branch can effect us, as I often here people think the contrary.</p>
+<p dir="ltr">Just a quick rant as to how these new policies from the executive branch can effect the esports industry, as I often hear that people think the contrary.</p>
 <p>&nbsp;</p>
-<p dir="ltr">While I certainly want was is best for the American economy, I think that comes from policies that actually help americans, not ones that deter immigrants.</p>
+<p dir="ltr">While I certainly want was is best for the American economy, I think that comes from policies that actually help americans, not ones that deter immigration.</p>
 </div>
 
 
