updated with new entry

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 <head> 
 <title> Mattaey </title>
 <style type="text/css">
@@ -23,6 +23,7 @@ ul {
 <ul>
 
 <div class="links">
+<li> <a href=2021F1Changes.html> Pros and Cons for the Future of Formula One</a> July 1, 2019 </li>
 <li> <a href=Lyrical.html> Copying Lyrical Data / Intellectual Property </a>. June 13, 2019 </li>
 <li> <a href=TFue.html> Food for Thought on the TFue Situation / Contract Disputes</a>. May 26, 2019 </li>
 <li> <a href=Petty.html> Thinking Back on Petty</a>. April 4, 2019 </li>
