--- a/2021F1Changes.html
+++ b/2021F1Changes.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 <head> 
 <title> Matthew Childrey </title>
 </head>
@@ -8,7 +8,7 @@
 <h2>Matt Childrey</h2>
 
 </div>
-<h2>Pros and Cons for the Future of Formula One</h2>
+<h2>The Pros and Cons of Formula One's Future</h2>
 <h5>July 1, 2019</h5>
 <p>After the upcoming Hungarian Grand Prix, the F1 teams will be taking their annual summer break. While the engineers will be taking time off, we can expect the team principals to be focused on the infamous 2021 regulation changes. These new rules, which are currently being negotiated with F1 and FIA, are meant to find the best middle ground between performance, entertainment and spending.</p>
 <p>So what type of rules can we expect, and how will they affect us as spectators?</p>
@@ -18,7 +18,7 @@
 </div>
 
 
-<h2><em>Mattae</em><em>y #1268 on D</em><em>iscord, or @Mattaey on most socials. Also can email me at mattaey@gmail.com</em></h2>
+<h2><em>Mattae</em><em>y #1268 on D</em><em>iscord, or @Mattaey on most socials. You can also email me at mattaey@gmail.com</em></h2>
 </div>
 
 
