--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@ ul {
 <div class="header">
 <h2>Matthew Childrey</h2>
 <h2>About Me</h2>
-<p>Twenty-something writer and student at the University of Memphis. This is a small collection of my rambles, most of which are on law or esports. Sometimes poetry and essays. Website code is basic HTML, hosted on my Github repository.</p>
+<p>Twenty-something writer and student at the University of Memphis. This is a small collection of my rambles, most of which are on law or esports. Website uses basic HTML, and it's hosted on my Github repository. </p>
 </div>
 <ul>
 
 <div class="links">
-<li> <a href=2021F1Changes.html> Pros and Cons for the Future of Formula One</a> July 1, 2019 </li>
-<li> <a href=Lyrical.html> Copying Lyrical Data / Intellectual Property </a>. June 13, 2019 </li>
+<li> <a href=VoterLaw.html>Victory for Civil Rights in Tennessee</a>. September 17, 2019 </li>
+<li> <a href=2021F1Changes.html> The Pros and Cons of Formula One's Future</a> July 1, 2019 </li>
+<li> <a href=Lyrical.html> Copying Lyrical Data / Intellectual Property</a>. June 13, 2019 </li>
 <li> <a href=TFue.html> Food for Thought on the TFue Situation / Contract Disputes</a>. May 26, 2019 </li>
 <li> <a href=Petty.html> Thinking Back on Petty</a>. April 4, 2019 </li>
 <li> <a href=IreliaGuide.html> A Different Kind of Writing</a>. October 1, 2018 </li>
@@ -32,7 +33,7 @@ ul {
 </ul>
 </div>
 
-<h2><em>Mattae</em><em>y #1268 on D</em><em>iscord, or @Mattaey on most socials. Also can email me at mattaey@gmail.com</em></h2>
+<h2><em>Mattae</em><em>y #1268 on D</em><em>iscord, or @Mattaey on most socials. You also can email me at mattaey@gmail.com</em></h2>
 
 </body>
 </html>
