--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ ul {
 <ul>
 
 <div class="links">
+<li> <a href=Mixer.html>Esports is why Mixer will never be the Future</a>. October 28, 2019 </li>
 <li> <a href=VoterLaw.html>Victory for Civil Rights in Tennessee</a>. September 17, 2019 </li>
 <li> <a href=2021F1Changes.html> The Pros and Cons of Formula One's Future</a> July 1, 2019 </li>
 <li> <a href=Lyrical.html> Copying Lyrical Data / Intellectual Property</a>. June 13, 2019 </li>
