--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ ul {
 <ul>
 
 <div class="links">
+<li> <a href=Zoom.html>How Zoom is Taking Advantage of Consumers and a Pandemic</a>. April 1, 2020 </li>
 <li> <a href=Mixer.html>Esports is why Mixer will Never be the Future</a>. October 28, 2019 </li>
 <li> <a href=VoterLaw.html>Victory for Civil Rights in Tennessee</a>. September 17, 2019 </li>
 <li> <a href=2021F1Changes.html> The Pros and Cons of Formula One's Future</a> July 1, 2019 </li>
