New TikTok Piece
Wrote my thoughts down on this past weekend's development with TikTok. Hope Satya can pull together a good deal in 45 days, and I hope he doesn't give a dime to the Treasury.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ ul {
 <ul>
 
 <div class="links">
+<li> <a href=TikTok.html>Stop Treating TikTok as a Patsy and Let Microsoft Buy Their U.S. Ops</a>. August 3, 2020 </li>
 <li> <a href=Zoom.html>How Zoom is Taking Advantage of Consumers and a Pandemic</a>. April 1, 2020 </li>
 <li> <a href=Mixer.html>Esports is why Mixer will Never be the Future</a>. October 28, 2019 </li>
 <li> <a href=VoterLaw.html>Victory for Civil Rights in Tennessee</a>. September 17, 2019 </li>
